cambios necesarios para el funcionamiento de css e imagenes

--- a/juegos/inazuma.html
+++ b/juegos/inazuma.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8"> 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Alvaro Atienza">
-        <link rel="stylesheet" href="../styles.css">
-        <link rel="stylesheet" href="../juego.css">
+        <link rel="stylesheet" href="../css/juego.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Stack+Sans+Text:wght@200..700&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 </html>
 <body>
     <header class="info-juego">
-        <img src="../imagenes/logo_inazuma.png" alt="logo_inazuma">
+        <img src="../img/logo_inazuma.png" alt="logo_inazuma">
     </header>
 
     <p id="linea"></p>
@@ -24,19 +24,19 @@
             <br>
             <nav class="plataformas">
                 <a href="https://www.nintendo.com/es-es/Juegos/Nintendo-Switch-2-Edition/INAZUMA-ELEVEN-Heroes-Victory-Road-Nintendo-Switch-2-Edition-2950552.html">
-                    <img src="../imagenes/switch_icon.png" alt="logo nintendo switch">
+                    <img src="../img/switch_icon.png" alt="logo nintendo switch">
                 </a>
                 <br>
                 <a href="https://store.playstation.com/es-es/product/JP0720-PPSA22207_00-INZMGAMEDELUXE00">
-                    <img src="../imagenes/play_icon.png" alt="logo playstation">
+                    <img src="../img/play_icon.png" alt="logo playstation">
                 </a>
                 <br>
                 <a id="xbox" href="https://www.xbox.com/es-es/games/store/inazuma-eleven-heroes-victory-road-edición-deluxe/9NLB0293T63Q">
-                    <img src="../imagenes/xbox_icon.webp" alt="logo xbox">
+                    <img src="../img/xbox_icon.webp" alt="logo xbox">
                 </a>
                 <br>
                 <a href="https://store.steampowered.com/app/2799860/INAZUMA_ELEVEN_Heroes_Victory_Road">
-                    <img src="../imagenes/steam_icon.png" alt="logo steam">
+                    <img src="../img/steam_icon.png" alt="logo steam">
                 </a>
             </nav>
         </aside>
