--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Alvaro Atienza">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Stack+Sans+Text:wght@200..700&display=swap" rel="stylesheet">
@@ -18,14 +18,14 @@
         <main>
             <section class="steam-game" id="inazuma">
                 <a href="juegos/inazuma.html">
-                    <img src="imagenes/button_inazuma.jpg" alt="img 600x900 Inazuma Eleven">
+                    <img src="img/button_inazuma.jpg" alt="img 600x900 Inazuma Eleven">
                 </a>
                 <p>Inazuma Eleven: <br> Heroes' Victory Road</p>
             </section>
 
             <section class="steam-game" id="LeMansUltimate"> 
                 <a href="">
-                    <img src="imagenes/button_lemans.jpg" alt="img 600x900 LeMansUltimate">
+                    <img src="img/button_lemans.jpg" alt="img 600x900 LeMansUltimate">
                 </a>
                 <p>Le Mans Ultimate</p>
             </section>
